--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
+        <activity android:name=".GyroTracker" />
+
+        <service android:name=".GyroTracker" />
     </application>
 
 </manifest>
